# Subpar

./: .gitignore  Cargo.toml  README.md  watcher.sh
subpar/: Cargo.toml  README.md
subpar/src/: errors.rs  excel.rs  helpers.rs  lib.rs  macros.rs  server.rs  sheets.rs
subpar/src/base/: accessor.rs  cell.rs  instance.rs  messages.rs  mod.rs  row.rs  sheet.rs  state.rs  workbook.rs
subpar/src/csv/: instance.rs  mod.rs  reader.rs  writer.rs
subpar/src/csv/io/: mod.rs  reader.rs
subpar/tests/: test_full.rs
subpar/tests/Data/: test_db.xlsx
subpar_derive/: Cargo.toml
subpar_derive/src/: lib.rs
subpar_test/: Cargo.toml
subpar_test/data/: test_db.xlsx
subpar_test/tests/: test_full.rs
xlswriter-rs/: Cargo.toml  build.rs
xlswriter-rs/src/: lib.rs
xlsxwriter_rs/: Cargo.toml  build.rs
xlsxwriter_rs/src/: lib.rs
