[package]
name = "subpar"
version = "0.2.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
license = "MIT"
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]
description = "A set of traits and derives for working with tabular workbooks. It currently works read-only with excel and RW with google sheets and CSV. Currently being built for explicit use in the Process Foundry"


[features]
default = ["derive", "csv_tables"]
cartograph = []
derive = []
csv_tables = []

[dependencies]
# Basic Logging
log = "0.4.14"
env_logger = "0.9.0"

# DateTime
chrono = { version = "0.4.19", features = ["serde"] }

# Serialization Backend
serde = { version = "1.0.130", features = ["derive"] }

# JSON encoding/decoding
serde_json = "1.0.67"
serde-transcode = "1.1.1"
schemars = { version = "0.8.3", features = ["derive", "chrono", "uuid", "impl_json_schema"] }

# Unique identifiers
uuid =  { version = "0.8.2", features = ["serde", "v4", "v5"] }

# Web locations
url = "2.2.2"

# Csv Module
csv = "1.1.6"

# Google sheets accessor
sheets_db = {path = "../../Gappi/sheets_db"}
wrapi = {path="../../Wrapi"}
yup-oauth2 = {path="../../yup-oauth2"}

# Excel parser
calamine = "0.18.0"


# Macro for simplifying converting rows to structs/enums
subpar_derive = { path = "../subpar_derive" }

# Messaging platform
cartographic = { path = "/home/dfogelson/Foundry/Cartographic"}

# Error creation/handling
thiserror = "1.0.29"
anyhow = "1.0.43"
allwhat = { path = "../../allwhat/", features = ["all"] }

# Validation
filtrate = { path = "../../Filtrate" }
