[package]
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
description = "A set of traits and derives for working with tabular workbooks. It currently works read-only with excel and RW with google sheets and CSV. Currently being built for explicit use in the Process Foundry"
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]
license = "MIT"
name = "subpar"
version = "0.2.0"

[features]
cartograph = []
csv_tables = []
default = ["derive", "csv_tables"]
derive = []

[dependencies]
# Basic Logging
env_logger = "0.9.0"
log = "0.4.14"

# DateTime
chrono = {version = "0.4.19", features = ["serde"]}

# Serialization Backend
serde = {version = "1.0.130", features = ["derive"]}

# JSON encoding/decoding
schemars = {version = "0.8.8", features = ["derive", "chrono", "uuid", "impl_json_schema"]}
serde-transcode = "1.1.1"
serde_json = "1.0.72"

# Unique identifiers
uuid = {version = "0.8.2", features = ["serde", "v4", "v5"]}

# Web locations
url = "2.2.2"

# Csv Module
csv = "1.1.6"

# Google sheets accessor
# sheets_db = {path = "../../Gappi/sheets_db"}
# wrapi = {path="../../Wrapi"}
# yup-oauth2 = {path="../../yup-oauth2"}

# Excel parser
# calamine = "0.18.0"

# Macro for simplifying converting rows to structs/enums
subpar_derive = {path = "../subpar_derive"}

# Messaging platform
cartographic = {path = "/home/dfogelson/Foundry/Cartographic"}

# Error creation/handling
allwhat = {path = "../../allwhat/core", features = ["all"]}
thiserror = "1.0.30"

# Validation
filtrate = {path = "../../Filtrate"}
