[package]
name = "subpar_derive"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]

[features]
default = []


[lib]
name = "subpar_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.1"
syn = { version = "1.0.3", features = ["extra-traits"] }
quote = "1.0.2"
env_logger = "0.7.1"


# Error creation/handling
anyhow = "1.0.32"

[dev-dependencies]
syn = { version = "1.0.3", features = ["extra-traits"] }
