[package]
name = "subpar_derive"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]

[features]
default = []


[lib]
name = "subpar_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.28"
syn = { version = "1.0.74", features = ["extra-traits"] }
quote = "1.0.9"
env_logger = "0.9.0"


# Error creation/handling
anyhow = "1.0.43"

[dev-dependencies]
syn = { version = "1.0.74", features = ["extra-traits"] }
