[package]
name = "xlsxwriter_rs"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
build = "build.rs"
links = "xlsxwriter"
license = "MIT"
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]
description = "Bindings to use the libxlsxwriter"

[build-dependencies]
cc = "1.0"
bindgen = "0.46.0"
